# uuv-simulator-CCPP

navigator_auv/: CMakeLists.txt  package.xml
navigator_auv/scripts/: altitude_control.py  cbf_implementation.py  contour_heading.py  contour_heading_old.py  cubic_spline_contour.py  euler.py  euler_calculator.py  freq_changer.py  grid_detection.py  image_saver.py  just_cbf.py  just_cbf_full.py  just_cbf_prev.py  just_gap.py  local_planner_heading.py  main_code_comms.py  move_obstacle.py  move_sonar copy.py  move_sonar.py  new_CBF.py  obstacle_draw.py  only_gap.py  only_gap_copy.py  only_gap_coverage.py  pose_plotter.py  sonar_heading_node (copy).py  sonar_heading_node.py  sonar_obs_avoidance_merged_old.py  sonar_reconstruction.py  sonar_reconstruction_global_old.py  sonar_reconstruction_old.py  spawner.py  static_CBF_helper.py  turn_xy_cbf.py  velocity_cbf.py  velocity_xz_cbf.py
navigator_auv/scripts/helper nodes/: camera_image_saver.py  image_resizer  nerf_saver.py  object_detection.py  pose_csv.py  underwater_image_processor_node.py  yolo_detector.py  yolo_heading.py
nps_uw_multibeam_sonar/launch/: local_search_blueview_p900_nps_multibeam_ray.launch  local_search_blueview_p900_nps_multibeam_urdf_standalone_ray.launch
nps_uw_multibeam_sonar/models/blueview_p900_nps_multibeam_abs/: model.config  model.sdf
nps_uw_multibeam_sonar/models/blueview_p900_nps_multibeam_ray/: model.sdf
nps_uw_multibeam_sonar/urdf/: multibeam_sonar_blueview_p900.xacro
nps_uw_multibeam_sonar/worlds/: counter.py
rexrov2/rexrov2_control/config/: controllers.yaml  joint_controllers.yaml
rexrov2/rexrov2_control/launch/: start_pid_controller.launch
rexrov2/rexrov2_description/launch/: upload_rexrov2.launch
rexrov2/rexrov2_description/robots/: rexrov2_default.xacro
rexrov2/rexrov2_description/urdf/: rexrov2_base.xacro  rexrov2_sensors.xacro
rexrov2/rexrov2_gazebo/launch/: old _start_demo_pid_controller.launch  start_EROAS_demo.launch  start_EROAS_demo_coverage.launch  start_teleop_cbf.launch
uuv_simulator/uuv_control/uuv_control_utils/: CMakeLists.txt
uuv_simulator/uuv_control/uuv_control_utils/config/: trial.yaml
uuv_simulator/uuv_control/uuv_control_utils/launch/: start_helical_trajectory.launch
uuv_simulator/uuv_control/uuv_trajectory_control/launch/: rov_pid_controller.launch
uuv_simulator/uuv_control/uuv_trajectory_control/scripts/: demo_wp_trajectory_generator.py  rov_pid_controller.py
uuv_simulator/uuv_gazebo_worlds/launch/: ocean_waves.launch
uuv_simulator/uuv_gazebo_worlds/models/Coke_Can/: model.sdf
uuv_simulator/uuv_gazebo_worlds/models/CubeSoft_2/: model.config
uuv_simulator/uuv_gazebo_worlds/worlds/: allen_underwater.world  compact_underwater_terrain.world  contour.world  coral.world  fmg_world.world  nerf_world.world  obstacle_avoidance.world  ocean_waves.world  ocean_waves_full.world  ocean_waves_old.world  old_ocean.world  single_obstacle.world  wall_world.world
uuv_simulator/uuv_simulation_evaluation/uuv_smac_utils/: package.xml
uuv_simulator/uuv_teleop/launch/: uuv_teleop.launch
(+88 files in other folders)
